QtBeef/src/Qt/qsettings.bf

extension CQt
{
	[LinkName("QSettings_new")]
	public static extern QSettings_Ptr QSettings_new(libqt_string organization);
	[LinkName("QSettings_new2")]
	public static extern QSettings_Ptr QSettings_new2(void* _scope, libqt_string organization);
	[LinkName("QSettings_new3")]
	public static extern QSettings_Ptr QSettings_new3(void* format, void* _scope, libqt_string organization);
	[LinkName("QSettings_new4")]
	public static extern QSettings_Ptr QSettings_new4(libqt_string fileName, void* format);
	[LinkName("QSettings_new5")]
	public static extern QSettings_Ptr QSettings_new5();
	[LinkName("QSettings_new6")]
	public static extern QSettings_Ptr QSettings_new6(void* _scope);
	[LinkName("QSettings_new7")]
	public static extern QSettings_Ptr QSettings_new7(libqt_string organization, libqt_string application);
	[LinkName("QSettings_new8")]
	public static extern QSettings_Ptr QSettings_new8(libqt_string organization, libqt_string application, void** parent);
	[LinkName("QSettings_new9")]
	public static extern QSettings_Ptr QSettings_new9(void* _scope, libqt_string organization, libqt_string application);
	[LinkName("QSettings_new10")]
	public static extern QSettings_Ptr QSettings_new10(void* _scope, libqt_string organization, libqt_string application, void** parent);
	[LinkName("QSettings_new11")]
	public static extern QSettings_Ptr QSettings_new11(void* format, void* _scope, libqt_string organization, libqt_string application);
	[LinkName("QSettings_new12")]
	public static extern QSettings_Ptr QSettings_new12(void* format, void* _scope, libqt_string organization, libqt_string application, void** parent);
	[LinkName("QSettings_new13")]
	public static extern QSettings_Ptr QSettings_new13(libqt_string fileName, void* format, void** parent);
	[LinkName("QSettings_new14")]
	public static extern QSettings_Ptr QSettings_new14(void** parent);
	[LinkName("QSettings_new15")]
	public static extern QSettings_Ptr QSettings_new15(void* _scope, void** parent);
	[LinkName("QSettings_Delete")]
	public static extern void QSettings_Delete(QSettings_Ptr self);
	[LinkName("QSettings_MetaObject")]
	public static extern void** QSettings_MetaObject(void* self);
	
	public function void QSettings_OnMetaObject_action(void* self);
	[LinkName("QSettings_OnMetaObject")]
	public static extern void** QSettings_OnMetaObject(void* self, QSettings_OnMetaObject_action _action);
	[LinkName("QSettings_Qt_Metacast")]
	public static extern void* QSettings_Qt_Metacast(void* self, c_char* param1);
	
	public function void QSettings_OnMetacast_action(void* self, c_char* param1);
	[LinkName("QSettings_OnMetacast")]
	public static extern void* QSettings_OnMetacast(void* self, QSettings_OnMetacast_action _action);
	[LinkName("QSettings_Qt_Metacall")]
	public static extern c_int QSettings_Qt_Metacall(void* self, QMetaObject_Call param1, c_int param2, void** param3);
	
	public function void QSettings_OnMetacall_action(void* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QSettings_OnMetacall")]
	public static extern c_int QSettings_OnMetacall(void* self, QSettings_OnMetacall_action _action);
	[LinkName("QSettings_Tr")]
	public static extern libqt_string QSettings_Tr(c_char* s);
	[LinkName("QSettings_Clear")]
	public static extern void QSettings_Clear(void* self);
	[LinkName("QSettings_Sync")]
	public static extern void QSettings_Sync(void* self);
	[LinkName("QSettings_Status")]
	public static extern void* QSettings_Status(void* self);
	[LinkName("QSettings_IsAtomicSyncRequired")]
	public static extern bool QSettings_IsAtomicSyncRequired(void* self);
	[LinkName("QSettings_SetAtomicSyncRequired")]
	public static extern void QSettings_SetAtomicSyncRequired(void* self, bool enable);
	[LinkName("QSettings_BeginGroup")]
	public static extern void QSettings_BeginGroup(void* self, void* prefix);
	[LinkName("QSettings_EndGroup")]
	public static extern void QSettings_EndGroup(void* self);
	[LinkName("QSettings_Group")]
	public static extern libqt_string QSettings_Group(void* self);
	[LinkName("QSettings_BeginReadArray")]
	public static extern c_int QSettings_BeginReadArray(void* self, void* prefix);
	[LinkName("QSettings_BeginWriteArray")]
	public static extern void QSettings_BeginWriteArray(void* self, void* prefix);
	[LinkName("QSettings_EndArray")]
	public static extern void QSettings_EndArray(void* self);
	[LinkName("QSettings_SetArrayIndex")]
	public static extern void QSettings_SetArrayIndex(void* self, c_int i);
	[LinkName("QSettings_AllKeys")]
	public static extern void* QSettings_AllKeys(void* self);
	[LinkName("QSettings_ChildKeys")]
	public static extern void* QSettings_ChildKeys(void* self);
	[LinkName("QSettings_ChildGroups")]
	public static extern void* QSettings_ChildGroups(void* self);
	[LinkName("QSettings_IsWritable")]
	public static extern bool QSettings_IsWritable(void* self);
	[LinkName("QSettings_SetValue")]
	public static extern void QSettings_SetValue(void* self, void* key, void** value);
	[LinkName("QSettings_Value")]
	public static extern void* QSettings_Value(void* self, void* key, void** defaultValue);
	[LinkName("QSettings_Value2")]
	public static extern void* QSettings_Value2(void* self, void* key);
	[LinkName("QSettings_Remove")]
	public static extern void QSettings_Remove(void* self, void* key);
	[LinkName("QSettings_Contains")]
	public static extern bool QSettings_Contains(void* self, void* key);
	[LinkName("QSettings_SetFallbacksEnabled")]
	public static extern void QSettings_SetFallbacksEnabled(void* self, bool b);
	[LinkName("QSettings_FallbacksEnabled")]
	public static extern bool QSettings_FallbacksEnabled(void* self);
	[LinkName("QSettings_FileName")]
	public static extern libqt_string QSettings_FileName(void* self);
	[LinkName("QSettings_Format")]
	public static extern void* QSettings_Format(void* self);
	[LinkName("QSettings_Scope")]
	public static extern void* QSettings_Scope(void* self);
	[LinkName("QSettings_OrganizationName")]
	public static extern libqt_string QSettings_OrganizationName(void* self);
	[LinkName("QSettings_ApplicationName")]
	public static extern libqt_string QSettings_ApplicationName(void* self);
	[LinkName("QSettings_SetDefaultFormat")]
	public static extern void QSettings_SetDefaultFormat(void* format);
	[LinkName("QSettings_DefaultFormat")]
	public static extern void* QSettings_DefaultFormat();
	[LinkName("QSettings_SetPath")]
	public static extern void QSettings_SetPath(void* format, void* _scope, libqt_string path);
	[LinkName("QSettings_Event")]
	public static extern bool QSettings_Event(void* self, void** event);
	
	public function void QSettings_OnEvent_action(void* self, void** event);
	[LinkName("QSettings_OnEvent")]
	public static extern bool QSettings_OnEvent(void* self, QSettings_OnEvent_action _action);
	[LinkName("QSettings_Tr2")]
	public static extern libqt_string QSettings_Tr2(c_char* s, c_char* c);
	[LinkName("QSettings_Tr3")]
	public static extern libqt_string QSettings_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QSettings_BeginWriteArray2")]
	public static extern void QSettings_BeginWriteArray2(void* self, void* prefix, c_int size);
	[LinkName("QSettings_EventFilter")]
	public static extern bool QSettings_EventFilter(void* self, void** watched, void** event);
	
	public function void QSettings_OnEventFilter_action(void* self, void** watched, void** event);
	[LinkName("QSettings_OnEventFilter")]
	public static extern bool QSettings_OnEventFilter(void* self, QSettings_OnEventFilter_action _action);
	[LinkName("QSettings_TimerEvent")]
	public static extern void QSettings_TimerEvent(void* self, void** event);
	
	public function void QSettings_OnTimerEvent_action(void* self, void** event);
	[LinkName("QSettings_OnTimerEvent")]
	public static extern void QSettings_OnTimerEvent(void* self, QSettings_OnTimerEvent_action _action);
	[LinkName("QSettings_ChildEvent")]
	public static extern void QSettings_ChildEvent(void* self, void** event);
	
	public function void QSettings_OnChildEvent_action(void* self, void** event);
	[LinkName("QSettings_OnChildEvent")]
	public static extern void QSettings_OnChildEvent(void* self, QSettings_OnChildEvent_action _action);
	[LinkName("QSettings_CustomEvent")]
	public static extern void QSettings_CustomEvent(void* self, void** event);
	
	public function void QSettings_OnCustomEvent_action(void* self, void** event);
	[LinkName("QSettings_OnCustomEvent")]
	public static extern void QSettings_OnCustomEvent(void* self, QSettings_OnCustomEvent_action _action);
	[LinkName("QSettings_ConnectNotify")]
	public static extern void QSettings_ConnectNotify(void* self, void** signal);
	
	public function void QSettings_OnConnectNotify_action(void* self, void** signal);
	[LinkName("QSettings_OnConnectNotify")]
	public static extern void QSettings_OnConnectNotify(void* self, QSettings_OnConnectNotify_action _action);
	[LinkName("QSettings_DisconnectNotify")]
	public static extern void QSettings_DisconnectNotify(void* self, void** signal);
	
	public function void QSettings_OnDisconnectNotify_action(void* self, void** signal);
	[LinkName("QSettings_OnDisconnectNotify")]
	public static extern void QSettings_OnDisconnectNotify(void* self, QSettings_OnDisconnectNotify_action _action);
}
[AllowDuplicates]
enum QSettings_Status
{
	NoError = 0,
	AccessError = 1,
	FormatError = 2,
}
[AllowDuplicates]
enum QSettings_Format
{
	NativeFormat = 0,
	IniFormat = 1,
	InvalidFormat = 16,
	CustomFormat1 = 17,
	CustomFormat2 = 18,
	CustomFormat3 = 19,
	CustomFormat4 = 20,
	CustomFormat5 = 21,
	CustomFormat6 = 22,
	CustomFormat7 = 23,
	CustomFormat8 = 24,
	CustomFormat9 = 25,
	CustomFormat10 = 26,
	CustomFormat11 = 27,
	CustomFormat12 = 28,
	CustomFormat13 = 29,
	CustomFormat14 = 30,
	CustomFormat15 = 31,
	CustomFormat16 = 32,
}
[AllowDuplicates]
enum QSettings_Scope
{
	UserScope = 0,
	SystemScope = 1,
}